# dft-vqe-hubbard

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: summary_v1.qmd  summary_v1_br.qmd
notebooks/: summary_v1.qmd
scripts/: 01_validate_operators.py  02_solve_exact.py  03_compare_dft_exact.py  04_compare_vqe_dft_pl.py  05_final_benchmark.py
src/dft_vqe_hubbard/algebra/: numpy_backend.py  operator_backend.py  pennylane_backend.py
src/dft_vqe_hubbard/physics/: dft.py  hamiltonian.py  jordan_wigner.py
src/dft_vqe_hubbard/quantum/: ansatz.py  pennylane_ansatz.py  pennylane_backend.py  pennylane_vqe.py  vqe_solver.py
src/dft_vqe_hubbard/quantum/solver/: pennylane_solver.py  result.py  solver.py
src/dft_vqe_hubbard/visualization/: plots.py  plotter.py
tests/algebra/: test_numpy_backend.py  test_pennylane_backend.py
tests/physics/: test_dft.py  test_hamiltonian.py  test_jordan_wigner.py
tests/quantum/: test_pennylane_ansatz.py  test_pennylane_backend.py  test_pennylane_vqe.py
tests/quantum/solver/: test_pennylane_solver.py
