[project]
name = "dft-vqe-hubbard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kaue Miziara", email = "kauemiziara@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
